# rr_demo

./: .gitignore  GEMINI_RULES.md  PLANNING.md  README.md  benchmark.py  board.py  board.txt  board.yaml  board_validator.py  game.py  main.py  pyproject.toml  robots.py  targets.py  utils.py
src/: board.py  common.py  game.py  robots.py  solver.py
tests/: test_board.py  test_board.txt  test_common.py  test_solver.py
