[project]
name = "ricochet-robots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pyyaml>=6.0.1",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.12.12",
    "pytest>=8.4.2",
    "pyright>=1.1.405"
]
