[project]
name = "rr_demo"
version = "0.1.0"
description = "A demo of Ricochet Robots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pyyaml>=6.0.1",
    "pandas>=2.2.0",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.12.12",
    "pytest>=8.4.2",
    "pyright>=1.1.405",
    "pyinstaller>=6.9.0"
]
